# individual_security_1

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  config.json  constants.py  main.py  monitor.py  monitor1.py  pyproject.toml  requirements.txt  treinamento.py
.github/workflows/: build.yml
downloads/YOLOElderlyPose.v2i.yolov11/: data.yaml
downloads/YOLOElderlyPose.v2i.yolov11/test/labels/: 1d6a94d6323b484723419fa699524c6e24be7453_jpg.rf.17783c9b0a6e4268b8ad3af2b46952b7.txt  BM63-BM6_png.rf.e14ffe0e0ddf6e819823adf8a1277442.txt  WF28-WF62_png.rf.4833ce0037d36d5cff46bc56777d8416.txt  WhatsApp-Image-2023-07-26-at-16-09-23_jpg.rf.1cff86894fa08da8e5ed34e426da2773.txt  fd3c731e950d755a9074fed7af91fbd95e01ee0a_jpg.rf.1f27cfa66b2a111fc80cf955afb5888d.txt
downloads/YOLOElderlyPose.v2i.yolov11/train/: labels.cache
downloads/YOLOElderlyPose.v2i.yolov11/train/labels/: -_jpeg.rf.a5793e13edadd25f6bf06717ceba925c.txt  00fbabdf2a533d62ac4a720afed2f690bfb38949_jpg.rf.f3a16c124e9f6a8ce5bec1219adbacc7.txt  037ee2d5e186fbaa750c88196e8ce69fa1c7e543_jpg.rf.cb2deb4e34a2eb4cddff6af5a9e7b810.txt  03debee44ad5b5155673bb0cd64359780a01af78_jpg.rf.10229bfec3076c7e3a7439f21c2683e5.txt  0a1e22e46a72bf7c36acd3bb221659daba26997d_jpg.rf.4b840e949e3ce217d92e0e1083091cb5.txt  0dfc9751adc9e64e8dca7fd1fa0fae811298be7d_jpg.rf.720dbd14489875c6642b2436ee0e9bc3.txt  0f2290e39c13c584c4abc7e711d7a2641a21f01b_jpg.rf.2aa9fbf8261729208d5d3fbbfba0c976.txt  1265e30168eb7e42bdd953cd11f6d859c2b05f2e_jpg.rf.e8145a577bd5730369561c954504a745.txt  1270280f0a19e4b3eab381f12c1037b1c5bcfd16_jpg.rf.90ad1a7a0c963660a4ed5d04c9ed8e9f.txt  13f781f56949e9a81d5c53fbd5f13271594e56fa_jpg.rf.dc41f8b746c1ceee8ad10427d4d38f4e.txt  14090a54d20e13ae9849e569c0a931659af0a443_jpg.rf.2e6cdc32af9d30b33c019b4fa0d44bf8.txt  15f0a8fdef4819f06505e408c21eb2078f0adc1c_jpg.rf.7f36974a92f378137e3ec2d146454560.txt  1727fe772e7b673a6a07cba1f5a76f8bbde2ad8d_jpg.rf.c7435a98c59b1dcc907f69f3a17a201f.txt  1b3b56db3a482df22c8f6c22e6ef16703e450070_jpg.rf.10c7084153b01fb88df4d1b4436d81ff.txt  1b83282f5e84d8e31503234c75b00f093c972121_jpg.rf.cfe37882bda2d28c72b776a56a0dac84.txt  1d8fd0f1de12f2d881fb9e04ea2188a9cc92d22e_jpg.rf.c46a31440a0afb0dc69f7be35b684565.txt  1e26716e13fc5c9efb9d6d800fd4662daa921278_jpg.rf.5c82895057388b931f2bd6aa4fe60c00.txt  1f66eb01015318e005850c19a6b97f740c0d8fd1_jpg.rf.a61e69b54b9b1546ebb89f2becf535fc.txt  24f9f384a1c16c415a4e5b9ed88b047e80d20758_jpg.rf.e353ee0a9669b43a6144f153b1463e93.txt  2580534351c2fc0053305b1906ce711c7dffa668_jpg.rf.6e4b1dd07cda1121e697368629f18e27.txt  26dcda61312fee85da776b7537b9c5fb82ef02f9_jpg.rf.e07a9a9d2e25472fd8d050a64c4068d4.txt  2835145ef5f816bc06703e5eaaf931b324725c22_jpg.rf.7c975a11ada4bffd52f65e4b520bb9c4.txt  2a51b44e620d5ac207813ee24df62640c60eb28d_jpg.rf.bd9c09466deefc10f867173107ed7715.txt  2ae3db0464dc9d5aa16d80a3e824b67182446d73_jpg.rf.7ade8fa9fd6d4e46e313bed1d23c0789.txt  2cd30c6a6acdfa01e6b21e95fbde9fa0cb5fc0a0_jpg.rf.de7026e7cf6c50b2693948c0a683f7f0.txt  2e36194fd76e2192b662743e13a5ae7d91eaeeab_jpg.rf.4a95adbc12e4e862c01d03b658ecbe04.txt  309782a98985da786b3d1d3ca2106825695c6a46_jpg.rf.90dfae47933b2ec7d58d8cea76962c15.txt  3107f8a409fcd1c2bbce28fae302fd32f2523e2b_jpg.rf.7a0bafd97676532216cf9df50063be5c.txt  323ff0edad0e0f11a03f932697483deb87377161_jpg.rf.56ece14227e95bd2ce4a585b09bd340d.txt  (+294 more)
downloads/YOLOElderlyPose.v3i.yolov11/: README.dataset.txt  README.roboflow.txt  data.yaml
downloads/YOLOElderlyPose.v3i.yolov11/train/: labels.cache
downloads/YOLOElderlyPose.v3i.yolov11/valid/: labels.cache
downloads/imagens/: idoso.icns
runs/pose/train/: args.yaml  results.csv
runs/pose/train2/: args.yaml  results.csv
(+77 files in other folders)
