[project]
name = "projeto-mid"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lap>=0.5.12",
    "opencv-python==4.10.0.84",
    "pandas>=2.2.3",
    "rich>=13.9.4",
    "ultralytics>=8.3.78",
]

[dependency-groups]
dev = [
    "auto-py-to-exe>=2.46.0",
    "ruff>=0.9.6",
    "taskipy>=1.14.1",
]

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.taskipy.tasks]
lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'
jupyter = 'uv run --with jupyter jupyter lab'
run = "python main.py"
train = "python treinamento.py"
create_exe = 'pyinstaller --noconfirm --onefile --console --icon "downloads/imagens/idoso.ico" --clean --splash "downloads/imagens/idoso.png" --optimize "1" --add-data "runs/pose/train/weights/best.pt;runs/pose/train/weights" --exclude-module "ruff" --exclude-module "taskipy" --hidden-import "numpy" --hidden-import "torch" --hidden-import "yaml" --hidden-import "cv2" --hidden-import "lap" --hidden-import "tensorboard" --hidden-import "torch.utils.tensorboard" --add-data "downloads/YOLOElderlyPose.v2i.yolov11/data.yaml;downloads/YOLOElderlyPose.v2i.yolov11" "main.py"'
create_linux = 'pyinstaller --noconfirm --onefile --console --clean --splash "downloads/imagens/idoso.png"  --optimize "1" --strip --add-data "runs/pose/train/weights/best.pt:runs/pose/train/weights" --exclude-module "ruff" --exclude-module "taskipy" --hidden-import "numpy" --hidden-import "torch" --hidden-import "yaml" --hidden-import "cv2" --hidden-import "lap" --hidden-import "tensorboard" --hidden-import "torch.utils.tensorboard" --add-data "downloads/YOLOElderlyPose.v2i.yolov11/data.yaml:downloads/YOLOElderlyPose.v2i.yolov11" "main.py"'
create_mac = 'pyinstaller --noconfirm --onefile --icon "downloads/imagens/idoso.icns" --clean --optimize "1" --target-arch universal2 --osx-bundle-identifier "com.elderlypose.monitor" --add-data "runs/pose/train/weights/best.pt:runs/pose/train/weights" --exclude-module "ruff" --exclude-module "taskipy" --hidden-import "numpy" --hidden-import "torch" --hidden-import "yaml" --hidden-import "cv2" --hidden-import "lap" --hidden-import "tensorboard" --hidden-import "torch.utils.tensorboard" --add-data "downloads/YOLOElderlyPose.v2i.yolov11/data.yaml:downloads/YOLOElderlyPose.v2i.yolov11" "main.py"'
